--- a/static/index.html
+++ b/static/index.html
@@ -403,7 +403,7 @@
           $("#lboardpopup").append(`
           <div style="margin:5px;display:flex;flex-direction:row;align-items:center;justify-content:flex-start;background-color:rgb(255, 240, 221);color:black;border:solid 1px black;padding:5px;border-radius:3px">
             <div style="height:25px;width:25px;border-radius:50%;display:flex;align-items:center;justify-content:center;width:40px;">
-              <p style="font-size:30px;font-weight:400;margin-top:1px;margin-bottom:3px;font-weight:800;margin-right:8px;">${i+1}</p>
+              <p style="font-size:30px;font-weight:400;margin-top:1px;margin-bottom:3px;font-weight:800;margin-right:8px;">${i + 1}</p>
             </div>
             <p style="font-size:24px;font-weight:400;margin-top:1px;margin-bottom:3px;width:350px;display:flex;align-items:center;justify-content:flex-start;">${item.username}
               </span><span
@@ -422,11 +422,11 @@
           })
         })
         $("#popupback4").css("opacity", 0);
-        $("#popupback4").css("display","flex")
+        $("#popupback4").css("display", "flex")
         $("#popupback4").animate({
           opacity: 1
         }, 400)
-        
+
       })
 
       socket.on("end_game_results", (data) => {
@@ -567,21 +567,22 @@
         setInterval(() => {
           if (timer > 0) {
             if (gameinfo.red.uid == uinfo.uid) {
-              if (gameinfo.rbank.length < 3 && Math.random() > 0.6) {
-                const val = [2, 4][Math.floor((Math.random() * 2))]
+              if (gameinfo.rbank.length < 4 && Math.random() > 0.6) {
+                const val = [2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 8][Math.floor((Math.random() * 12))]
                 socket.emit("add_bank", gameinfo.id, uinfo.uid, val);
                 bank.push(val)
               }
             } else {
-              if (gameinfo.bbank.length < 3 && Math.random() > 0.6) {
-                const val = [2, 4][Math.floor((Math.random() * 2))]
+              
+              if (gameinfo.bbank.length < 4 && Math.random() > 0.6) {
+                const val = [2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 8][Math.floor((Math.random() * 12))]
                 socket.emit("add_bank", gameinfo.id, uinfo.uid, val);
                 bank.push(val)
               }
 
             }
           }
-        }, 500)
+        }, 1000)
       })
     }
   </script>
